# Card-Game-Magic

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Magic  Magic.cbp  Makefile  README.md  cmake_install.cmake
Documentation/html/: _al_resource_8hpp.html  _al_resource_8hpp_source.html  _audio_2_export_8hpp.html  _audio_2_export_8hpp_source.html  _audio_8hpp.html  _audio_8hpp_source.html  _blend_mode_8hpp.html  _blend_mode_8hpp_source.html  _card_8cpp.html  _card_8cpp__incl.map  _card_8h.html  _card_8h__dep__incl.map  _card_8h__dep__incl.md5  _card_8h__incl.map  _card_8h__incl.md5  _card_8h_source.html  _circle_shape_8hpp.html  _circle_shape_8hpp_source.html  _client_8cpp.html  _clipboard_8hpp.html  _clipboard_8hpp_source.html  _clock_8hpp.html  _clock_8hpp_source.html  _color_8hpp.html  _color_8hpp_source.html  _config_8hpp.html  _config_8hpp_source.html  _context_8hpp.html  _context_8hpp_source.html  _context_settings_8hpp.html  _context_settings_8hpp_source.html  _convex_shape_8hpp.html  _convex_shape_8hpp_source.html  _creature_card_8cpp.html  _creature_card_8cpp__incl.map  _creature_card_8cpp__incl.md5  _creature_card_8h.html  _creature_card_8h__dep__incl.map  _creature_card_8h__dep__incl.md5  _creature_card_8h__incl.map  (+1163 more)
Documentation/latex/: _al_resource_8hpp.tex  _al_resource_8hpp_source.tex  _audio_2_export_8hpp.tex  _audio_2_export_8hpp_source.tex  _audio_8hpp.tex  _audio_8hpp_source.tex  _blend_mode_8hpp.tex  _blend_mode_8hpp_source.tex  _card_8cpp.tex  _card_8cpp__incl.md5  _card_8h.tex  _card_8h__dep__incl.md5  _card_8h__incl.md5  _card_8h_source.tex  _circle_shape_8hpp.tex  _circle_shape_8hpp_source.tex  _client_8cpp.tex  _clipboard_8hpp.tex  _clipboard_8hpp_source.tex  _clock_8hpp.tex  _clock_8hpp_source.tex  _color_8hpp.tex  _color_8hpp_source.tex  _config_8hpp.tex  _config_8hpp_source.tex  _context_8hpp.tex  _context_8hpp_source.tex  _context_settings_8hpp.tex  _context_settings_8hpp_source.tex  _convex_shape_8hpp.tex  _convex_shape_8hpp_source.tex  _creature_card_8cpp.tex  _creature_card_8cpp__incl.md5  _creature_card_8h.tex  _creature_card_8h__dep__incl.md5  _creature_card_8h__incl.md5  _creature_card_8h_source.tex  _cursor_8hpp.tex  _cursor_8hpp_source.tex  _deck_8cpp.tex  (+695 more)
Documentation/rtf/: _card_8cpp__incl.md5  _creature_card_8h__dep__incl.md5  _deck_8cpp__incl.md5  _deck_8h__dep__incl.md5  _deck_8h__incl.md5  _deck_creator_8cpp__incl.md5  _deck_creator_8h__dep__incl.md5  _enchantment_card_8h__dep__incl.md5  _game_8h__incl.md5  (+71 more)
Source/: Makefile  test.json
data/: cards.json
header/: Card.h  CreatureCard.h  Deck.h  DeckCreator.h  EnchantmentCard.h  GameCards.h  LandCard.h  Player.h  StrColor.h
src/: Card.cpp  Card.h  CreatureCard.cpp  CreatureCard.h  Deck.cpp  DeckCreator.cpp  EnchantmentCard.cpp  Game.cpp  GameCards.cpp  LandCard.cpp  Main.cpp  Makefile  Player.cpp  StrColor.cpp  Util.cpp  main
(+313 files in other folders)
